[package]
name = "modwire"
description = "Tools for module organisation."
keywords = [
    "organisation",
    "module",
    "macro",
    "flatten"
]
version = "0.1.0"
edition = "2024"
readme = "readme.md"
license = "Apache-2.0"
repository = "/" # waiting for the repository to be renamed
publish = true